Use Stream.toList() instead of Collectors.toList()
Java 16+ has a shorter `.toList()` that does the same job and returns an
unmodifiable list, which is what we want at these call sites anyway.
Replaces 22 sites across 16 files and removes the now-unused Collectors
imports.

Left a couple alone on purpose:
- Neo4jChatMemoryRepository uses Collectors.toList() as the downstream
  collector inside Collectors.mapping(...), which is a different thing.
- MultiQueryExpander mutates the result via add(0, ...), so it needs to
  stay a mutable list.

Signed-off-by: stohirov <suxrobtoxirov001@gmail.com>